--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -97,8 +97,9 @@ text-shadow:0px 0px rgba(255,255,255,0.06);
 </head>
 
 <body >
-  .
- <app-login-component class="divbox"></app-login-component>
+  
+ <!-- <app-login-component class="divbox"></app-login-component> -->
+ <app-my-component></app-my-component>
 
 
 
