--- a/src/app/login-component/login-component.component.html
+++ b/src/app/login-component/login-component.component.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <title>Document</title>
     <style>
         .loginbox1 {
@@ -641,7 +642,6 @@
             </div>
         <div *ngIf="ismainVisible" id="theportfolio">
             
-            jfs
         </div>
     </div>
 
