--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -98,8 +98,8 @@ text-shadow:0px 0px rgba(255,255,255,0.06);
 
 <body >
   
- <!-- <app-login-component class="divbox"></app-login-component> -->
- <app-my-component></app-my-component>
+ <app-login-component class="divbox"></app-login-component>
+ <!-- <app-my-component></app-my-component> -->
 
 
 
