--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -78,7 +78,9 @@ text-shadow:0px 0px rgba(255,255,255,0.06);
 }
 
 
-
+body{
+      background: linear-gradient(to right, #32115C, #3E115C,#4B115C, #3E115C, #3E115C, #32115C);
+    }
 
 
 
