--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -78,14 +78,13 @@ text-shadow:0px 0px rgba(255,255,255,0.06);
 }
 
 
-body{
-      background: linear-gradient(to right, #32115C, #3E115C,#4B115C, #3E115C, #3E115C, #32115C);
-    }
 
 
 
 
-
+body {
+    background: linear-gradient(to right, #32115C, #3E115C, #4B115C, #3E115C, #3E115C, #32115C) !important;
+  }
 
 
 
@@ -99,7 +98,7 @@ body{
 </head>
 
 <body >
-  
+  .
  <app-login-component class="divbox"></app-login-component>
  <!-- <app-my-component></app-my-component> -->
 
