this adds tag body

--- a/src/app/login-component/login-component.component.html
+++ b/src/app/login-component/login-component.component.html
@@ -1,4 +1,4 @@
-
+<body>
     <div *ngIf="isloading==0">
 
         <div id="loadingcontent">
@@ -275,3 +275,4 @@
         </div>
     </div>
 
+</body>
